update style.css twenty fourteen
long page titles without spaces are going out of bounds.

--- a/wp-content/themes/twentyfourteen/style.css
+++ b/wp-content/themes/twentyfourteen/style.css
@@ -1047,6 +1047,8 @@ span + .edit-link:before,
 
 .content-area {
 	padding-top: 48px;
+	word-wrap: break-word; 
+ 	overflow-wrap: break-word; 
 }
 
 .hentry {
